--- a/tests/index.html
+++ b/tests/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen">
   <script type="text/javascript" src="qunit/qunit.js"></script>
   <script type="text/javascript" src="minispade.js"></script>
-  <script type="text/javascript" src="../lib/jquery-1.7.2.js"></script>
+  <script type="text/javascript" src="../lib/jquery-1.10.1.js"></script>
+  <script type="text/javascript" src="../lib/handlebars-1.0.0-rc.4.js"></script>
   <script type="text/javascript" src="../lib/ember.js"></script>
 
   <script type="text/javascript">
@@ -46,6 +47,9 @@
 
     var extendPrototypes = QUnit.urlParams.extendprototypes;
     ENV['EXTEND_PROTOTYPES'] = !!extendPrototypes;
+
+    // Always test inflected classify function
+    Ember.ENV['INFLECTED_CLASSIFY'] = true;
 
     // Handle CP cacheable by default
     QUnit.config.urlConfig.push('nocpdefaultcacheable');
