--- a/tests/index.html
+++ b/tests/index.html
@@ -90,9 +90,7 @@
 
     var distros = {
       spade:   'ember-spade.js',
-      build:   'ember.js',
-      prod:    'ember.prod.js',
-      runtime: 'ember-runtime.js'
+      build:   'modules/ember-inflector.js',
     };
 
     var emberFile = distros[dist];
