fix some issues/add jshint

--- a/tests/index.html
+++ b/tests/index.html
@@ -75,6 +75,7 @@
   <div id="qunit-fixture">test markup</div>
 
   <script type="text/javascript" src="/dist/ember-inflector.js"></script>
+  <script type="text/javascript" src="/dist/ember-inflector.jshint.js"></script>
   <script type="text/javascript" src="/dist/tests.js"></script>
 
   <script type="text/javascript">
