bring in ember-data master changes

--- a/tests/index.html
+++ b/tests/index.html
@@ -76,6 +76,9 @@
 
   <script type="text/javascript" src="/dist/ember-inflector.js"></script>
   <script type="text/javascript" src="/dist/ember-inflector.jshint.js"></script>
+  <script type="text/javascript">
+  requireModule('ember-inflector');
+  </script>
   <script type="text/javascript" src="/dist/tests.js"></script>
 
   <script type="text/javascript">
