remove grunt; replace with testem

--- a/tests/index.html
+++ b/tests/index.html
@@ -5,6 +5,7 @@
   <title>QUnit Test Suite</title>
   <link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen">
   <script type="text/javascript" src="qunit/qunit.js"></script>
+  <script src="/testem.js"></script>
   <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="/bower_components/handlebars/handlebars.js"></script>
   <script type="text/javascript" src="/bower_components/ember/ember.js"></script>
@@ -74,12 +75,12 @@
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup</div>
 
-  <script type="text/javascript" src="/dist/ember-inflector.js"></script>
-  <script type="text/javascript" src="/dist/ember-inflector.jshint.js"></script>
+  <script type="text/javascript" src="/ember-inflector.js"></script>
+  <script type="text/javascript" src="/ember-inflector.jshint.js"></script>
   <script type="text/javascript">
   requireModule('ember-inflector');
   </script>
-  <script type="text/javascript" src="/dist/tests.js"></script>
+  <script type="text/javascript" src="/tests.js"></script>
 
   <script type="text/javascript">
 
