fix tests for HTMLBars
closes GH-63

--- a/tests/index.html
+++ b/tests/index.html
@@ -16,6 +16,7 @@
   <script src="/testem.js"></script>
   <script type="text/javascript" src="/bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="/bower_components/handlebars/handlebars.js"></script>
+  <script type="text/javascript" src="/bower_components/ember/ember-template-compiler.js"></script>
   <script type="text/javascript" src="/bower_components/ember/ember.js"></script>
 
   <script type="text/javascript">
